# chatapp-learning

./: .env  Cargo.toml  db.sqlite
frontend/: package-lock.json  package.json
frontend/app/: actions.tsx  form.tsx  page.tsx  posts.tsx
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entity/: post.rs
